# metacritic-cli

./: Cargo.toml  README.md
src/: args.rs  main.rs  metacriticresults.rs
