[package]
name = "metacritic-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
colored = "2.0.0"
dict = "0.1.5"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
serde = "1.0.152"
serde_json = "1.0.89"
urlencoding = "2.1.2"
