[package]
name = "metacritic-cli"
version = "1.2.3"
edition = "2021"
authors = ["nithe <imnithe@gmail.com>"]
license-file = "LICENSE"
description = "A metacritic cli scraper"
repository = "https://github.com/Nithe14/metacritic-cli"
readme = "README.md"
keywords = ["metacritic", "scraper", "cli", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
colored = "2.0.0"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
urlencoding = "2.1.2"
