[package]
name = "metacritic-cli"
version = "1.2.4"
edition = "2021"
authors = ["nithe <imnithe@gmail.com>"]
license-file = "LICENSE"
description = "A metacritic cli scraper"
repository = "https://github.com/Nithe14/metacritic-cli"
readme = "README.md"
keywords = ["metacritic", "scraper", "cli", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
serde = "1.0.175"
serde_derive = "1.0.175"
serde_json = "1.0.103"
urlencoding = "2.1.3"
